Added name to list in branch

--- a/webtest.html
+++ b/webtest.html
@@ -10,7 +10,7 @@
     <h1>My Group</h1>
     <br>
     <h3>Group member list:</h3>
-    <!-- Zak Neilson,  Joseph Ayleshaa-->
+    <!--Zak Neilson member 1-->
     <div>
         <p> Team member one </p>
     </div>
